replacing evaluation_module.py
